--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.13",
+    "@types/uuid": "^9.0.7",
     "clsx": "^2.0.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.4",
@@ -21,6 +22,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-scripts": "5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
