--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.13",
+    "@types/react-redux": "^7.1.33",
     "@types/uuid": "^9.0.7",
     "clsx": "^2.0.0",
     "emailjs-com": "^3.2.0",
@@ -24,8 +25,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
+    "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
+    "redux": "^5.0.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
